GO-T622 fixed buttons alignment

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -220,6 +220,14 @@
       }
     }
 
+    &:not(.has-filters) {
+      .fs-list-header {
+        .fs-list-toolbar {
+          margin-left: auto;
+        }
+      }
+    }
+
     &:not(.has-filters):not(.has-actions):not(.has-heading)  {
       .fs-list-header-container {
         display: none;
